// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Util functions Highlights all installed versions 1`] = `
Array [
  Array [
    "highlight installed versions",
  ],
  Array [
    " - 1.4.0",
  ],
  Array [
    " - 1.5.0",
  ],
]
`;

exports[`Util functions Highlights all installed versions 2`] = `
Array [
  Array [
    " → 1.1.0",
  ],
  Array [
    " → 1.3.0 (Global Default)",
  ],
]
`;

exports[`Util functions Highlights all installed versions 3`] = `
Array [
  Array [
    " ✓ 1.2.0",
  ],
]
`;

exports[`Util functions Highlights the default version 1`] = `
Array [
  Array [
    "highlight default version",
  ],
  Array [
    " - 1.1.0",
  ],
  Array [
    " - 1.3.0 (Global Default)",
  ],
  Array [
    " - 1.4.0",
  ],
  Array [
    " - 1.5.0",
  ],
]
`;

exports[`Util functions Highlights the default version 2`] = `Array []`;

exports[`Util functions Highlights the default version 3`] = `
Array [
  Array [
    " ✓ 1.2.0",
  ],
]
`;

exports[`Util functions Highlights the version currently in use 1`] = `
Array [
  Array [
    "highlight current version",
  ],
  Array [
    " - 1.1.0",
  ],
  Array [
    " - 1.3.0",
  ],
  Array [
    " - 1.4.0",
  ],
  Array [
    " - 1.5.0",
  ],
]
`;

exports[`Util functions Highlights the version currently in use 2`] = `Array []`;

exports[`Util functions Highlights the version currently in use 3`] = `
Array [
  Array [
    " ✓ 1.2.0",
  ],
]
`;

exports[`Util functions Prints all versions passed to printVersion function 1`] = `
Array [
  Array [
    "print all versions",
  ],
  Array [
    " - 1.1.0",
  ],
  Array [
    " - 1.3.0",
  ],
  Array [
    " - 1.4.0",
  ],
  Array [
    " - 1.5.0",
  ],
]
`;

exports[`Util functions Prints all versions passed to printVersion function 2`] = `Array []`;

exports[`Util functions Prints all versions passed to printVersion function 3`] = `
Array [
  Array [
    " ✓ 1.2.0",
  ],
]
`;
